--- a/Backend/testRabbitMQ.ini
+++ b/Backend/testRabbitMQ.ini
@@ -2,10 +2,10 @@
 BROKER_HOST = 192.168.1.90
 BROKER_PORT = 5672
 USER = admin
-PASSWORD = admin
+PASSWORD = 'admin'
 VHOST = testHost
 EXCHANGE = testExchange
 QUEUE = testQueue
-;EXCHANGE_TYPE = ????
-AUTO_DELETE = false
+EXCHANGE_TYPE = direct
+AUTO_DELETE = no
 
