able to username and password request from login to rmq and mysql

--- a/Frontend/rmq/testRabbitMQ.ini
+++ b/Frontend/rmq/testRabbitMQ.ini
@@ -6,6 +6,6 @@ PASSWORD = admin
 VHOST = testHost
 EXCHANGE = testExchange
 QUEUE = testQueue
-;EXCHANGE_TYPE = ????
+EXCHANGE_TYPE = direct
 AUTO_DELETE = false
 
